@@ -1,6 +1,7 @@
 0.11.102
 	+ Use the new EBox::Model::Row API
 	+ Added pageTitle to Objects model
+	+ Add help to Objects model
 0.11.101
 	+ New release
 0.11.100
